created new database config

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ DB_DATABASE=ezyjump_admin
 DB_USERNAME=root
 DB_PASSWORD=
 
+DO_DB_CONNECTION=mysql
+DO_DB_HOST=127.0.0.1
+DO_DB_PORT=3306
+DO_DB_DATABASE=ezyjump_admin
+DO_DB_USERNAME=root
+DO_DB_PASSWORD=
+DO_DB_CA_CERT=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
