--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -16,12 +16,13 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 DO_DB_CONNECTION=mysql
-DO_DB_HOST=127.0.0.1
-DO_DB_PORT=3306
-DO_DB_DATABASE=ezyjump_admin
-DO_DB_USERNAME=root
+DO_DB_HOST=
+DO_DB_PORT=
+DO_DB_DATABASE=
+DO_DB_USERNAME=
 DO_DB_PASSWORD=
-DO_DB_CA_CERT=
+DO_DB_CA_CERT=storage/certs/
+DO_DB_SSL_MODE=required
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
