--- a/docker/nginx/sites/laravel.conf
+++ b/docker/nginx/sites/laravel.conf
@@ -1,4 +1,3 @@
-
 server {
 
     listen 80;
@@ -8,14 +7,8 @@ server {
     add_header X-Content-Type-Options "nosniff";
     charset utf-8;
 
-    # For https
-    listen 443 ssl;
-    listen [::]:443 ssl ipv6only=on;
-    ssl_certificate /etc/nginx/ssl/default.crt;
-    ssl_certificate_key /etc/nginx/ssl/default.key;
-
-    server_name laravel.dev.local;
-    root /var/www/laravel/current/public;
+    server_name _;
+    root /var/www/html/public;
     index index.php index.html index.htm;
 
     location / {
@@ -24,7 +17,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri /index.php =404;
-        fastcgi_pass php-upstream;
+        fastcgi_passh php-upstream;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
@@ -38,10 +31,6 @@ server {
         deny all;
     }
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/letsencrypt/;
-        log_not_found off;
-    }
     location = /favicon.ico {
         access_log off;
         log_not_found off;
@@ -52,6 +41,6 @@ server {
     }
 
 
-    error_log /var/log/nginx/laravel_error.log;
-    access_log /var/log/nginx/laravel_access.log;
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
