--- a/DockerfileProd
+++ b/DockerfileProd
@@ -1,59 +1,102 @@
-FROM ubuntu:22.04
+FROM php:8.2-fpm
 
-LABEL maintainer="Taylor Otwell"
+# Set working directory
+WORKDIR /var/www
 
-ARG WWWGROUP
-ARG NODE_VERSION=18
-ARG POSTGRES_VERSION=15
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --force-yes --no-install-recommends \
+        build-essential \
+        libpng-dev \
+        libjpeg62-turbo-dev \
+        libfreetype6-dev \
+        locales \
+        zip \
+        jpegoptim optipng pngquant gifsicle \
+        vim \
+        unzip \
+        git \
+        curl \
+        libzip-dev \
+        libmemcached-dev \
+        libz-dev \
+        libpq-dev \
+        libssl-dev \
+        openssh-server \
+        libmagickwand-dev \
+        cron \
+        nano \
+        libxml2-dev \
+        libreadline-dev \
+        libgmp-dev \
+        mariadb-client \
+        libxslt1-dev \
+        icu-devtools \
+        libicu-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /var/www/html
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV TZ=UTC
+# Install soap extention
+RUN docker-php-ext-install soap
 
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+# Install for image manipulation
+RUN docker-php-ext-install exif
 
-RUN apt-get update \
-    && apt-get install -y gnupg gosu curl ca-certificates zip unzip git supervisor sqlite3 libcap2-bin libpng-dev python2 dnsutils librsvg2-bin fswatch \
-    && curl -sS 'https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c' | gpg --dearmor | tee /etc/apt/keyrings/ppa_ondrej_php.gpg > /dev/null \
-    && echo "deb [signed-by=/etc/apt/keyrings/ppa_ondrej_php.gpg] https://ppa.launchpadcontent.net/ondrej/php/ubuntu jammy main" > /etc/apt/sources.list.d/ppa_ondrej_php.list \
-    && apt-get update \
-    && apt-get install -y php8.2-cli php8.2-dev \
-       php8.2-pgsql php8.2-sqlite3 php8.2-gd php8.2-imagick \
-       php8.2-curl \
-       php8.2-imap php8.2-mysql php8.2-mbstring \
-       php8.2-xml php8.2-zip php8.2-bcmath php8.2-soap \
-       php8.2-intl php8.2-readline \
-       php8.2-ldap \
-       php8.2-msgpack php8.2-igbinary php8.2-redis php8.2-swoole \
-       php8.2-memcached php8.2-pcov php8.2-xdebug \
-    && curl -sLS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer \
-    && curl -sLS https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
-    && apt-get install -y nodejs \
-    && npm install -g npm \
-    && npm install -g pnpm \
-    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor | tee /etc/apt/keyrings/yarn.gpg >/dev/null \
-    && echo "deb [signed-by=/etc/apt/keyrings/yarn.gpg] https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list \
-    && curl -sS https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/keyrings/pgdg.gpg >/dev/null \
-    && echo "deb [signed-by=/etc/apt/keyrings/pgdg.gpg] http://apt.postgresql.org/pub/repos/apt jammy-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
-    && apt-get update \
-    && apt-get install -y yarn \
-    && apt-get install -y mysql-client \
-    && apt-get install -y postgresql-client-$POSTGRES_VERSION \
-    && apt-get -y autoremove \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Install the PHP pcntl extention
+RUN docker-php-ext-install pcntl
 
-RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.2
+# Install the PHP zip extention
+RUN docker-php-ext-install zip
 
-RUN groupadd --force -g $WWWGROUP sail
-RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
+# Install the PHP pdo_mysql extention
+RUN docker-php-ext-install pdo_mysql
 
-COPY start-container /usr/local/bin/start-container
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY php.ini /etc/php/8.2/cli/conf.d/99-sail.ini
-RUN chmod +x /usr/local/bin/start-container
+# Install the PHP pdo_pgsql extention
+RUN docker-php-ext-install pdo_pgsql
 
-EXPOSE 8000
+# Install the PHP bcmath extension
+RUN docker-php-ext-install bcmath
 
-ENTRYPOINT ["start-container"]
+# Install the PHP intl extention
+RUN docker-php-ext-install intl
+
+# Install the PHP gmp extention
+RUN docker-php-ext-install gmp
+
+######################################
+## PHPRedis:
+######################################
+#RUN pecl install redis
+
+
+# Install the PHP gd library
+RUN docker-php-ext-install gd && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
+    docker-php-ext-install gd
+
+
+#RUN pecl install igbinary && docker-php-ext-enable igbinary
+
+# Enable
+RUN docker-php-ext-install calendar
+RUN docker-php-ext-install gettext
+RUN docker-php-ext-install mysqli
+RUN docker-php-ext-install sockets
+RUN docker-php-ext-install xsl
+RUN docker-php-ext-install shmop
+RUN docker-php-ext-install sysvmsg
+RUN docker-php-ext-install sysvsem
+RUN docker-php-ext-install sysvshm
+
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Add user for laravel application
+RUN groupadd -g 1000 www && useradd -u 1000 -ms /bin/bash -g www www
+
+# Copy existing application directory contents and set correct permissions
+COPY --chown=www:www . /var/www
+
+# Expose port 9000 and start php-fpm server
+EXPOSE 9000
+CMD ["php-fpm"]
