--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,11 @@ jobs:
 
       - name: Install SSH key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}"" > ~/.ssh/id_rsa
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
+
 
       - name: Deploy to DigitalOcean
         run: |
