--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Install SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
-
-
-      - name: Deploy to DigitalOcean
-        run: |
-          ssh "${{ secrets.USERNAME }}"@"${{ secrets.IP }}" 'cd "${{ secrets.DIRECTORY }}" && git pull'
+#          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
+#          chmod 600 ~/.ssh/id_rsa
+#          ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
+#
+#
+#      - name: Deploy to DigitalOcean
+#        run: |
+#          ssh "${{ secrets.USERNAME }}"@"${{ secrets.IP }}" 'cd "${{ secrets.DIRECTORY }}" && git pull'
 
