--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Install SSH key
         run: |
           mkdir -p ~/.ssh
+          touch ~/.ssh/id_rsa
 #          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
 #          chmod 600 ~/.ssh/id_rsa
 #          ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
