paste rsa content test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           touch ~/.ssh/id_rsa
-#          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
 #          chmod 600 ~/.ssh/id_rsa
 #          ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
 #
