--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,11 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           touch ~/.ssh/id_rsa
+          touch ~/.ssh/id_rsa.pub
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
           chmod 600 ~/.ssh/id_rsa
+          chmod 644 ~/.ssh/id_rsa.pub
           ssh-keyscan -t rsa "${{ secrets.IP }}" >> ~/.ssh/known_hosts
 
       - name: Deploy to DigitalOcean
