added some minor changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,11 @@ jobs:
         run: |
           ssh "${{ secrets.USERNAME }}"@"${{ secrets.IP }}" 'cd "${{ secrets.DIRECTORY }}" && git pull'
 
+      - name: Clear configs
+        run: |
+          docker compose -f docker-compose.prod.yml exec app npm run build \
+          && docker compose -f docker-compose.prod.yml exec app php artisan config:clear \
+          && docker compose -f docker-compose.prod.yml exec app composer dump-autoload -o \
+          && docker compose -f docker-compose.prod.yml exec app php artisan route:clear \
+          && docker compose -f docker-compose.prod.yml exec app php artisan optimize:clear \
+          && docker compose -f docker-compose.prod.yml exec app php artisan queue:restart
