--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,9 @@ jobs:
         run: |
           ssh "${{ secrets.USERNAME }}"@"${{ secrets.IP }}" \
             'cd "${{ secrets.DIRECTORY }}" && \
-            docker-compose -f docker-compose.prod.yml exec app npm run build && \
-            docker-compose -f docker-compose.prod.yml exec app php artisan config:clear && \
-            docker-compose -f docker-compose.prod.yml exec app composer dump-autoload -o && \
-            docker-compose -f docker-compose.prod.yml exec app php artisan route:clear && \
-            docker-compose -f docker-compose.prod.yml exec app php artisan optimize:clear && \
-            docker-compose -f docker-compose.prod.yml exec app php artisan queue:restart'
+            docker compose -f docker-compose.prod.yml exec app npm run build && \
+            docker compose -f docker-compose.prod.yml exec app php artisan config:clear && \
+            docker compose -f docker-compose.prod.yml exec app composer dump-autoload -o && \
+            docker compose -f docker-compose.prod.yml exec app php artisan route:clear && \
+            docker compose -f docker-compose.prod.yml exec app php artisan optimize:clear && \
+            docker compose -f docker-compose.prod.yml exec app php artisan queue:restart'
